--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "config": "^3.3.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
