--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chokidar": "^3.5.1",
+    "passport-local": "^1.0.0",
     "react-calendar": "^3.4.0",
     "react-router-dom": "^5.2.0"
   }
