--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.0.2",
+    "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "fullcalendar": "^5.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-date-picker": "^8.2.0",
