--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "fullcalendar": "^5.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-circle-modal": "^0.0.2",
     "react-date-picker": "^8.2.0",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
